--- a/app/config/config_test.yml
+++ b/app/config/config_test.yml
@@ -14,3 +14,17 @@ web_profiler:
 
 swiftmailer:
     disable_delivery: true
+
+security:
+    firewalls:
+        dev:
+            pattern:  ^/(_(profiler|wdt)|css|images|js)/
+            security: false
+
+        main:
+            pattern: /.*
+            http_basic:
+                realm: "Secured Area"
+            logout: true
+            security: true
+            anonymous: true
