--- a/app/config/routing.yml
+++ b/app/config/routing.yml
@@ -1,3 +1,28 @@
-app:
-    resource: "@AppBundle/Controller/"
+jukebox:
+    resource: "@JukeboxBundle/Controller/"
     type:     annotation
+    prefix:   /
+
+core:
+    resource: "@CoreBundle/Controller/"
+    type:     annotation
+    prefix:   /
+
+
+# Sonata Admin
+admin:
+    resource: '@SonataAdminBundle/Resources/config/routing/sonata_admin.xml'
+    prefix: /admin
+
+_sonata_admin:
+    resource: .
+    type: sonata_admin
+    prefix: /admin
+
+# FOS User
+fos_user:
+    resource: "@FOSUserBundle/Resources/config/routing/all.xml"
+
+#fos_user_group:
+#    resource: "@FOSUserBundle/Resources/config/routing/group.xml"
+#    prefix: /group
