--- a/app/config/config_test.yml
+++ b/app/config/config_test.yml
@@ -28,3 +28,12 @@ security:
             logout: true
             security: true
             anonymous: true
+
+
+doctrine:
+    dbal:
+        driver:   pdo_sqlite
+        dbname:   "%database_name%"
+        user:     "%database_user%"
+        password: "%database_password%"
+        charset:  UTF8
